[package]
name = "dpm"
version = "0.0.1"
edition = "2024"
authors = ["Diego Cattelan"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/Sunnyday-Software/docker-project-manager"
rust-version = "1.85.0"

[dependencies]
walkdir = "2.5.0"
md-5 = "0.10.6"
regex = "1.11.1"
dirs = "6.0.0"
lexpr = "0.2.7"

[target.'cfg(unix)'.dependencies]
uzers = "0.12.1"
