[package]
name = "dpm"
version = "1.1.4"
edition = "2021"
authors = ["Diego Cattelan"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/Sunnyday-Software/docker-project-manager"
rust-version = "1.88.0"

[dependencies]
walkdir = "2.5.0"
md-5 = "0.10.6"
regex = "1.11.1"
dirs = "6.0.0"
lexpr = "0.2.7"
emojis-rs = "0.1.3"

[target.'cfg(unix)'.dependencies]
uzers = "0.12.1"
